Allow compilation from JDK8 and 12