@@ -43,23 +43,18 @@
             <activation>
                 <jdk>[9,)</jdk>
             </activation>
-            
             <build>
 				<plugins>
 		              <plugin>
 						<artifactId>maven-compiler-plugin</artifactId>
 						<configuration>
-							<source>9</source>
-							<target>9</target>
 
 	                        <!-- jdk.crypto.cryptoki : SunPKCS11 -->
 	                        <compilerArgs>
 								<arg>--add-modules</arg>
 								<arg>jdk.crypto.cryptoki</arg>
 								
-								<arg>--add-exports</arg>
-								<arg>jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED</arg>		
-														
+								
 								<!-- Reflection at runtime -->
 								<arg>--add-opens</arg>
 								<arg>jdk.crypto.cryptoki/sun.security.pkcs11=ALL-UNNAMED</arg>
