@@ -63,27 +63,29 @@
 					<plugin>
 						<artifactId>maven-compiler-plugin</artifactId>
 						<configuration>
-							<source>9</source>
-							<target>9</target>
 	                        <compilerArgs>
 								<arg>--add-modules</arg>
 								<arg>java.smartcardio</arg>
 							</compilerArgs>
 						</configuration>
 					</plugin>
-					<plugin>
-	                    <groupId>org.apache.maven.plugins</groupId>
-	                    <artifactId>maven-javadoc-plugin</artifactId>
-	                    <configuration>
-	                        <additionalJOptions>
-	                         <additionalJOption>-html5</additionalJOption>
-	                            <additionalJOption>--add-modules</additionalJOption>
-	                            <additionalJOption>java.smartcardio</additionalJOption>
-	                        </additionalJOptions>
-	                    </configuration>
-					</plugin>
+<!-- 					<plugin> -->
+<!-- 	                    <groupId>org.apache.maven.plugins</groupId> -->
+<!-- 	                    <artifactId>maven-javadoc-plugin</artifactId> -->
+<!-- 	                    <configuration> -->
+<!-- 	                        <additionalJOptions> -->
+<!-- 	                        	<additionalJOption>-html5</additionalJOption> -->
+<!-- 	                            <additionalJOption> - -add-modules</additionalJOption> -->
+<!-- 	                            <additionalJOption>java.smartcardio</additionalJOption> -->
+<!-- 	                        </additionalJOptions> -->
+<!-- 	                    </configuration> -->
+<!-- 					</plugin> -->
 				</plugins>
 			</build>
+			
+			<properties>
+				<maven.javadoc.skip>true</maven.javadoc.skip>
+            </properties>
 		</profile>
 	</profiles>
 </project>
